@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-Document-RTML
-version:      1.15
+version:      1.16
 version_from: RTML.pm
 installdirs:  site
 requires:
